manifests/kraft/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: kraft-core
    project: kraft
  name: kraft-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kraft-core
  template:
    metadata:
      labels:
        app: kraft-core
    spec:
      serviceAccountName: kraftsa
      automountServiceAccountToken: true
      containers:
      - image: registry.alexbissessur.dev/kraft-core:latest
        name: kraft-core
        ports:
        - containerPort: 5000
        resources: {}
