manifests/kraft/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: kraft-core
  name: kraft-core
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: kraft-core
status:
  loadBalancer: {}
