manifests/kraft/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kraft-ingressroute
  annotations:
    cert-manager.io/cluster-issuer: "prod-issuer"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - kraftcloud.dev
    secretName: kraftcloud-tls
  rules:
  - host: kraftcloud.dev
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: kraft-core
            port:
              number: 5000
      - path: /resources
        pathType: Prefix
        backend:
          service:
            name: kraft-resource-manage
            port:
              number: 5000
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: kraft-core
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kraft-frontend
            port:
              number: 80
